--- a/src/Core/Core.fsproj
+++ b/src/Core/Core.fsproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <Compile Include="Mapping\Records.fs" />
     <Compile Include="Mapping\Operations.fs" />
+    <Compile Include="CodeGeneration\Records.fs" />
+    <Compile Include="CodeGeneration\Operations.fs" />
     <None Include="Scratchpad.fsx" />
     <Compile Include="Library.fs" />
   </ItemGroup>
