--- a/src/Core/Core.fsproj
+++ b/src/Core/Core.fsproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,7 +10,6 @@
     <Compile Include="Operations\Conventions\Operations.fs" />
     <Compile Include="Operations\Mapping\Operations.fs" />
     <Compile Include="Operations\CodeGeneration\Operations.fs" />
-    <None Include="Scratchpad.fsx" />
   </ItemGroup>
 
 </Project>
