--- a/src/Core.Tests/Core.Tests.fsproj
+++ b/src/Core.Tests/Core.Tests.fsproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Tests.fs" />
+    <Compile Include="MappingTests.fs" />
   </ItemGroup>
 
   <ItemGroup>
