--- a/src/Core.Tests/Core.Tests.fsproj
+++ b/src/Core.Tests/Core.Tests.fsproj
@@ -8,9 +8,11 @@
 
   <ItemGroup>
     <Compile Include="MappingTests.fs" />
+    <Compile Include="CodeGenerationTests.fs" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FsUnit.xUnit" Version="3.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.6.0-preview-20180109-01" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
