--- a/src/Core.Tests/Core.Tests.fsproj
+++ b/src/Core.Tests/Core.Tests.fsproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -9,6 +9,7 @@
   <ItemGroup>
     <Compile Include="MappingTests.fs" />
     <Compile Include="CodeGenerationTests.fs" />
+    <Compile Include="Program.fs" />
   </ItemGroup>
 
   <ItemGroup>
